prevent horizontal jumping of the screen

--- a/app/assets/stylesheets/events.css
+++ b/app/assets/stylesheets/events.css
@@ -4,10 +4,13 @@
 	font-family: Arial, Helvetica, sans-serif;
 }
 
+html {
+	overflow-y: scroll;
+	overflow-x: hidden;
+}
+
 html, body {
 	background: #f8f8ff !important;
-	max-width: 100%;
-    overflow-x: hidden;
 }
 
 /* events list and event */
